# cryptoalpha_lite

./: .cascaderules  .env.template  .gitignore  .pre-commit-config.yaml  DEVIN_CONTEXT.md  README.md  clean_up.sh  cryptoalpha_windsurf_history.tgz
backend/: pyproject.toml  runtime_overrides.json
backend/.codex_out/: 2026-02-25T15-28-44_024e115cd383.md  2026-02-25T15-32-29_024e115cd383.md  2026-02-25T15-35-50_024e115cd383.md  2026-02-25T15-48-56_7705797237b2.md
backend/app/: __init__.py  main.py
backend/scripts/: add_risk_reward_column.py  bybit_borrow_diagnostics.py  bybit_order_realtime.py  export_events.py  monitor_scratchpad_tasks.py  rl_baseline_helper.py  rl_baseline_watchdog.py  rl_promotion_recommender.py  rl_replay.py  rl_snapshots_collect.py  rl_snapshots_report.py  rl_status.py  set_runtime_config_safe_testnet.py
backend/stress/: __init__.py  classifier.py
backend/tests/: test_behavior_data_adapter_v2.py  test_behavior_evaluation_harness_v1.py  test_behavior_insights_v1.py  test_behavior_metrics_v1.py  test_chaos_drills.py  test_contract_registry_inversion.py  test_controlled_pilot_trace.py  test_cross_module_consistency.py  test_dataset_expansion_v1.py  test_decision_dynamics_v1.py  test_decision_layer_isolation_v1.py  test_decision_representation_fix_v1.py  test_economic_closure_layer_v1.py  test_edge_diagnosis_v1.py  test_edge_validation_v1.py  test_event_contract_consistency.py  test_event_lineage_consistency.py  test_execution_reality_model_v1.py  test_execution_replay_runner.py  test_extension_contract_v1.py  test_feature_impact_analysis_v1.py  (+47 more)
(+370 files in other folders)
