[tool.poetry]
name = "ctoai-backend"
version = "0.1.0"
description = "CTO-AI autonomous trading backend"
authors = ["Cascade Assistant <ctoai@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
httpx = "^0.27.0"
redis = "^5.0.1"
asyncpg = "^0.29.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
structlog = "^24.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
websockets = "^12.0"
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
rich = "^13.7.0"
python-json-logger = "^2.0.7"
torch = "^2.1.2"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
ruff = "^0.2.0"
pre-commit = "^3.6.0"
bandit = "^1.7.8"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
